--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "konva": "^9.3.15",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-konva": "^18.2.10",
+    "react-modal": "^3.16.1",
+    "use-image": "^1.1.1"
   }
 }
