--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "canvas": "^2.11.2",
     "font-awesome": "^4.7.0",
     "konva": "^9.3.15",
     "next": "14.2.13",
